# tplate

./: .gitignore  .replit  CMakeLists.txt  README.md
include/: directory.h  dstring.h  file.h  log.h  project.h
src/: directory.c  dstring.c  file.c  log.c  main.c  project.c
